--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -1,188 +1,641 @@
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  background: rgba(255, 254, 248, 1);
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+a {
+  text-decoration: none;
 }
-blockquote, q {
-	quotes: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
-	font-size: 14px;
+  max-width: 1140px;
+  margin: auto;
+  font-family: "Work Sans";
+  font-size: 14px;
 }
 header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
 }
 section {
-	margin: 50px 0
+  margin: 50px 0;
 }
 
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: #B1663C
+h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #b1663c;
 }
 
 h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
 
-h2{
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 30px;
-	color: #1D6154
+h2 {
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1d6154;
 }
 nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
-nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+nav a {
+  padding: 0 25px 0 25px;
+  font-size: 1.2em;
+  text-decoration: none;
+  color: black;
 }
 
-li:hover {
-	color: #B1663C;
+a:hover {
+  font-weight: 600;
 }
 #introduction {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 #introduction figure {
-	flex: 1
+  flex: 1;
+  position: relative;
 }
 #introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+  display: block;
+  margin: auto;
+  width: 80%;
 }
-
 #introduction article {
-	flex: 1
+  flex: 1;
+  position: relative;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
-
 #introduction p {
-	margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 #portfolio h2 {
-	text-align: center;
-	margin-bottom: 1em;
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1d6154;
+  text-align: center;
 }
+/************************
+
+
+/* CSS Modale*/
+.edition {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 1440px;
+  margin-left: -150px;
+  background: black;
+}
+
+.edition i {
+  font-size: 16px;
+  color: white;
+  background: black;
+}
+
+.mode {
+  color: white;
+  background: black;
+  border: none;
+}
+
+.publier {
+  color: black;
+  background-color: white;
+  border: none;
+  padding: 10px 22px;
+  border-radius: 60px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.editBtn {
+  display: none;
+  justify-content: space-evenly;
+  align-items: baseline;
+  width: 15%;
+  cursor: pointer;
+}
+
+.editBtnFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem;
+}
+
+.editBtn0 {
+  display: none;
+  justify-content: space-between;
+  position: absolute;
+  left: 9%;
+  font-size: 15px;
+  margin: 2%;
+  width: 15%;
+}
+
+.editBtn1 {
+  display: none;
+  justify-content: space-between;
+  font-size: 15px;
+  margin: 2%;
+  width: 15%;
+}
+
+.editBtn2 {
+  display: none;
+  justify-content: space-between;
+  font-size: 15px;
+  margin: 2%;
+  width: 8%;
+}
+
+.tokenModifier {
+  display: flex;
+  margin: 10px;
+}
+
+.modalContainer {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000 
+}
+
+.modal1,
+.modal2 {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 630px;
+  height: 730px;
+  background: white;
+  border-radius: 10px;
+}
+
+/************************/
+.flex-galery {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: inherit;
+}
+
+.modal1 h2,
+.modal2 H2 {
+  font-family: "Work Sans";
+  font-size: 26px;
+  font-weight: 400;
+  text-align: center;
+  color: black;
+  margin-top: 60px;
+  margin-bottom: 46px;
+}
+.worksContainer {
+  width: 420px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 7px;
+  grid-row-gap: 10px;
+  overflow-y: auto;
+}
+.worksContainer img {
+  width: 100%;
+  height: 105px;
+  object-fit: cover;
+}
+.worksContainer figure {
+  position: relative;
+}
+.editer {
+  font-family: "Work Sans";
+  font-size: 12px;
+  border: none;
+  background: white;
+  padding: 0;
+}
+.delete {
+  position: absolute;
+  top: 6px;
+  right: 4px;
+  background: white;
+  padding: 4px;
+  border: none;
+  font-size: 9px;
+  border-radius: 2px;
+}
+.delete:hover {
+  transform: scale(1.1);
+
+  cursor: pointer;
+}
+.separator {
+  width: 420px;
+  height: 1px;
+  background: #b3b3b3;
+  margin: 47px auto 0 auto;
+}
+.closeModal2,
+.closeModal1 {
+  position: absolute;
+  top: 32px;
+  right: 36px;
+  background: white;
+  border: none;
+  cursor: pointer;
+}
+
+.closeModal2 i,
+.closeModal1 i,
+.back i {
+  font-weight: 600;
+}
+#closeImg i {
+  display: none;
+  font-size: 25px;
+  font-weight: 600;
+  padding: 0;
+  position: absolute;
+  right: 7rem;
+  color: black;
+}
+#closeImg i:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.back {
+  position: absolute;
+  top: 32px;
+  left: 36px;
+  background: white;
+  border: none;
+  cursor: pointer;
+}
+.addWork {
+  font-family: "Syne";
+  color: white;
+  background: #1d6154;
+  border-radius: 60px;
+  border: none;
+  padding: 10px 50px;
+  margin: 38px 0 23px 0;
+  width: 240px;
+  text-align: center;
+  margin-left: 2rem;
+}
+.addWork:active {
+  color: white;
+  background: #a7a7a7;
+}
+.addWork:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.valid {
+  font-family: "Syne";
+  color: white;
+  background: #a7a7a7;
+  border-radius: 60px;
+  border: none;
+  padding: 12px 50px;
+  margin: 38px auto 23px auto;
+  width: 40%;
+  text-align: center;
+  height: 16px;
+}
+
+.modal1 p {
+  font-family: "Work Sans";
+  font-weight: 400;
+  color: #d65353;
+  text-align: center;
+}
+#titre,
+#categorie {
+  width: 420px;
+  height: 50px;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
+}
+#sendImg {
+  display: flex;
+  flex-direction: column;
+}
+#sendImg label {
+  margin: 21px 0 10px 0;
+}
+.addImg {
+  margin: 0 auto;
+  width: 420px;
+  height: 170px;
+  background: #e8f1f6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 9px;
+}
+.addImg i {
+  font-size: 46px;
+  color: #b9c5cc;
+  padding-top: 28px;
+  background: #e8f1f6;
+}
+.addImg input {
+  display: none;
+}
+.addImg label {
+  color: #306685;
+  background: #cbd6dc;
+  padding: 10px 33px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.addImg p {
+  padding-bottom: 19px;
+  background: #e8f1f6;
+}
+.envoyer {
+  background: #1d6154;
+}
+#preview {
+  position: absolute;
+  height: 170px;
+}
+
 .gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .gallery img {
-	width: 100%;
-
+  width: 100%;
 }
+
+/* Ajout des filtres */
+
+.filtres {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 3rem;
+}
+.filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /**/
+  color: #1d6154;
+  border: solid #1d6154 1px;
+  grid-gap: 10px;
+  border-radius: 60px;
+  /**/
+  font-family: "Syne";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  margin: 10px;
+  padding: 10px;
+  height: auto;
+  cursor: pointer;
+}
+
+.filter:active {
+  background: #1d6154;
+  color: #ffffff;
+}
+/*
+.filtrer button {
+  border: none;
+  font-family: "Work Sans";
+  cursor: pointer;
+  background-color: inherit;
+  position: absolute;
+  top: 10px;
+  left: 65%;
+  transform: translateX(-40%);
+}
+
+.btnProjets i {
+  position: absolute;
+  top: 10px;
+  left: 62%;
+  transform: translateX(-50%);
+}
+/**************************************/
 #contact {
-	width: 50%;
-margin: auto;
+  margin: auto;
+  width: 50%;
 }
 #contact > * {
-	text-align: center;
-
+  text-align: center;
 }
-#contact h2{
-	margin-bottom: 20px;
+#contact h2 {
+  margin-bottom: 20px;
 }
 #contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-top: 30px;
 }
 
 #contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 #contact label {
-	margin: 2em 0 1em 0;
+  margin: 2em 0 1em 0;
 }
 #contact textarea {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
+button[type="submit"] {
+  text-align: center;
+  font-family: "Syne";
+  color: white;
+  background-color: #1d6154;
+  border-radius: 60px;
+  font-weight: 700;
+  margin: 2em;
+  height: 3rem;
+  cursor: pointer;
+}
+button[type="submit"]:active {
+  color: white;
+  background: #a7a7a7;
+}
+#forget {
+  text-align: center;
+  text-decoration: underline;
+  cursor: pointer;
+}
+footer {
+  background: white;
+}
+.footer_login {
+  margin-top: 10rem;
 }
 
 footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
+  display: flex;
+  justify-content: flex-end;
+  margin: 2em;
 }
-
