--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -402,22 +402,31 @@ a:hover {
 }
 
 .delete {
-  position: absolute;
-  top: 6px;
-  right: 4px;
-  background: white;
-  padding: 4px;
-  border: none;
-  font-size: 9px;
-  border-radius: 2px;
-}
-
-.delete:hover {
-  transform: scale(1.1);
-
-  cursor: pointer;
-}
-
+	position: absolute;
+	top: 6px;
+	right: 4px;
+	background: black; /* Fond noir */
+	color: white; /* Couleur de l'icône en blanc */
+	padding: 2px;
+	border: none;
+	border-radius: 2px;
+	cursor: pointer;
+	width: 14px; /* Réduction de la largeur du bouton */
+	height: 14px; /* Réduction de la hauteur du bouton */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .delete:hover {
+	transform: scale(1.1);
+  }
+  
+  .delete .material-symbols-outlined {
+	font-size: 10px; /* Réduction de la taille de l'icône */
+	pointer-events: none;
+  }
+  
 .separator {
   width: 420px;
   height: 1px;
